@@ -2198,3 +2198,5 @@ version 10.10 (2023-06-28)
       add value(s) that are already present in the parameter.
     * The OpenID Connect Federation 1.0 AddOperation.apply method must return
       an immutable List<String>.
+    * The OpenID Connect Federation 1.0 SubsetOfOperation.apply method must
+      return null instead of an empty List<String>.
